--- a/po/en.po
+++ b/po/en.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: com.github.sdv43.whaler\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-04-26 19:58+0300\n"
+"POT-Creation-Date: 2022-05-11 20:59+0300\n"
 "PO-Revision-Date: 2022-04-09 14:17+0300\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -74,25 +74,24 @@ msgstr "Name"
 msgid "Type"
 msgstr "Type"
 
-#: src/State/Root.vala:36
+#: src/State/Root.vala:40
 msgid "Cannot get list of docker containers"
 msgstr "The app cannot get list of docker containers"
 
-#: src/State/Root.vala:44
+#: src/State/Root.vala:48
 msgid "Docker isn't installed"
 msgstr ""
 "It looks like Docker is not installed on your system.\n"
-"To find out how to install it, see "
-"<a href=\"https://docs.docker.com/engine/install/\">Docker Manuals</a>."
+"To find out how to install it, see <a href=\"https://docs.docker.com/engine/"
+"install/\">Docker Manuals</a>."
 
-#: src/State/Root.vala:47
+#: src/State/Root.vala:51
 msgid "Docker runs as root"
 msgstr ""
-"It looks like Docker requires root rights to use it. "
-"Thus, the application cannot connect to Docker Engine API. "
-"Find out how to run docker without root rights in "
-"<a href=\"https://docs.docker.com/engine/install/linux-postinstall/\">Docker Manuals</a>, "
-"otherwise the application cannot work correctly."
+"It looks like Docker requires root rights to use it. Thus, the application "
+"cannot connect to Docker Engine API. Find out how to run docker without root "
+"rights in <a href=\"https://docs.docker.com/engine/install/linux-postinstall/"
+"\">Docker Manuals</a>, otherwise the application cannot work correctly."
 
 #: src/Widgets/HeaderBar.vala:14
 msgid "Back"
@@ -134,43 +133,75 @@ msgstr "Pause"
 msgid "Container pause error"
 msgstr "Container pause error"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:72
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:75
+msgid "Restart"
+msgstr "Restart"
+
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:77
+msgid "Container restart error"
+msgstr "Container restart error"
+
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:80
+msgid "Restarting container"
+msgstr "Restarting container"
+
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:96
 msgid "Remove"
 msgstr "Remove"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:75
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:99
 msgid "Do you really want to remove container?"
 msgstr "Do you really want to remove container?"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:76
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:100
 msgid "Yes, remove"
 msgstr "Yes, remove"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:77
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:101
 msgid "Cancel"
 msgstr "Cancel"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:81
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:107
 msgid "Container remove error"
 msgstr "Container remove error"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:104
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:109
+msgid "Removing container"
+msgstr "Removing container"
+
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:130
+msgid "Info"
+msgstr "Info"
+
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:132
+msgid "Cannot get information"
+msgstr "The app cannot get container data"
+
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:156
 msgid "Container action error"
 msgstr "Container action error"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:109
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:161
 msgid "Container stop error"
 msgstr "Container stop error"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:114
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:162
+msgid "Stopping container"
+msgstr "Stopping container"
+
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:168
 msgid "Container start error"
 msgstr "Container start error"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:119
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:169
+msgid "Starting container"
+msgstr "Starting container"
+
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:175
 msgid "Container unpause error"
 msgstr "Container unpause error"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:124
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:180
 msgid "Container state is unknown"
 msgstr "Container state is unknown"
 
