--- a/po/ru.po
+++ b/po/ru.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: com.github.sdv43.whaler\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-05-22 16:55+0300\n"
+"POT-Creation-Date: 2022-06-29 14:00+0300\n"
 "PO-Revision-Date: 2022-03-14 08:44+0300\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -48,9 +48,11 @@ msgid ""
 "Docker is installed on your system."
 msgstr ""
 "Это решение отлично подойдет тем кому нужен простой инструмент для базовых "
-"действий. Для корректной работы приложения, Docker должен быть установлен в системе."
+"действий. Для корректной работы приложения, Docker должен быть установлен в "
+"системе."
 
 #: src/Utils/Sorting/SortingName.vala:12
+#: src/Widgets/Utils/ContainerInfoDialog.vala:52
 msgid "Name"
 msgstr "Название"
 
@@ -58,44 +60,111 @@ msgstr "Название"
 msgid "Type"
 msgstr "Тип"
 
-#: src/State/Root.vala:40
-msgid "The app cannot get list of docker containers"
-msgstr "Приложение не может получить список docker контейнеров"
+#: src/Widgets/Utils/SettingsDialog.vala:11
+#: src/Widgets/Utils/ContainerInfoDialog.vala:13
+msgid "Close"
+msgstr "Закрыть"
 
-#: src/State/Root.vala:49
-msgid ""
-"It looks like Docker is not installed on your system.\n"
-"To find out how to install it, see <a href=\"https://docs.docker.com/engine/"
-"install/\">Docker Manuals</a>."
-msgstr ""
-"Похоже, что Docker не установлен в вашей системе.\n"
-"Инструкция по установке доступна в <a href=\"https://docs.docker.com/engine/"
-"install/\">Docker Manuals</a>."
+#: src/Widgets/Utils/SettingsDialog.vala:26
+msgid "Settings"
+msgstr "Настройки"
 
-#: src/State/Root.vala:56
+#: src/Widgets/Utils/SettingsDialog.vala:41
+msgid "API socket path:"
+msgstr "Путь к API сокету:"
+
+#: src/Widgets/Utils/SettingsDialog.vala:104
+msgid "Check connection"
+msgstr "Проверить соединение"
+
+#: src/Widgets/Utils/SettingsDialog.vala:124
+msgid "Success"
+msgstr "Успешно"
+
+#: src/Widgets/Utils/SettingsDialog.vala:124
+msgid "Error"
+msgstr "Ошибка"
+
+#: src/Widgets/Utils/SettingsDialog.vala:140
+#, c-format
+msgid "Incorrect socket path \"%s\""
+msgstr "Некорректный путь к сокету \"%s\""
+
+#: src/Widgets/Utils/DockerContainerStatusLabel.vala:11
+msgid "Running"
+msgstr "Запущен"
+
+#: src/Widgets/Utils/DockerContainerStatusLabel.vala:16
+msgid "Paused"
+msgstr "Приостановлен"
+
+#: src/Widgets/Utils/DockerContainerStatusLabel.vala:21
+msgid "Stopped"
+msgstr "Остановлен"
+
+#: src/Widgets/Utils/DockerContainerStatusLabel.vala:26
+msgid "Unknown"
+msgstr "Неизвестно"
+
+#: src/Widgets/Utils/ContainerInfoDialog.vala:53
+msgid "Image"
+msgstr "Образ"
+
+#: src/Widgets/Utils/ContainerInfoDialog.vala:54
+msgid "Status"
+msgstr "Статус"
+
+#: src/Widgets/Utils/ContainerInfoDialog.vala:57
+msgid "Ports"
+msgstr "Порты"
+
+#: src/Widgets/Utils/ContainerInfoDialog.vala:61
+msgid "Binds"
+msgstr "Пирвязки"
+
+#: src/Widgets/Utils/ContainerInfoDialog.vala:65
+msgid "Env"
+msgstr "Окружение"
+
+#: src/Widgets/HeaderBar.vala:15
+msgid "Back"
+msgstr "Назад"
+
+#: src/Widgets/HeaderBar.vala:40
+msgid "Update docker container list"
+msgstr "Обновить список docker контейнеров"
+
+#: src/Widgets/HeaderBar.vala:87 src/Widgets/ScreenError.vala:56
+msgid "Open settings"
+msgstr "Открыть настройки"
+
+#: src/Widgets/ScreenError.vala:33
 msgid ""
 "It looks like Docker requires root rights to use it. Thus, the application "
 "cannot connect to Docker Engine API. Find out how to run docker without root "
 "rights in <a href=\"https://docs.docker.com/engine/install/linux-postinstall/"
-"\">Docker Manuals</a>, otherwise the application cannot work correctly."
+"\">Docker Manuals</a>, otherwise the application cannot work correctly. Or "
+"check your socket path to Docker API in Settings."
 msgstr ""
 "Похоже, что Docker требует root права для работы. Из-за этого приложение не "
 "может подключиться к Docker Engine API. Инструкция по запуску без root прав "
 "доступна в <a href=\"https://docs.docker.com/engine/install/linux-"
 "postinstall/\">Docker Manuals</a>, иначе приложение не сможет работать "
-"корректно."
+"корректно. Либо проверьте путь к сокету Docker API в настройках."
 
-#: src/Widgets/HeaderBar.vala:14
-msgid "Back"
-msgstr "Назад"
+#: src/Widgets/ScreenError.vala:42
+msgid ""
+"It looks like Docker is not installed on your system. To find out how to "
+"install it, see <a href=\"https://docs.docker.com/engine/install/\">Docker "
+"Manuals</a>. Or check your socket path to Docker API in Settings."
+msgstr ""
+"Похоже, что Docker не установлен в вашей системе.\n"
+"Инструкция по установке доступна в <a href=\"https://docs.docker.com/engine/"
+"install/\">Docker Manuals</a>. Либо проверьте путь к сокету Docker API в настройках."
 
-#: src/Widgets/HeaderBar.vala:39
-msgid "Update docker container list"
-msgstr "Обновить список docker контейнеров"
-
-#: src/Widgets/HeaderBar.vala:42
-msgid "Update error"
-msgstr "Ошибка обновления"
+#: src/Widgets/ScreenError.vala:50
+msgid "The app cannot connect to Docker API"
+msgstr "Приложение не может подключиться к Docker API"
 
 #: src/Widgets/Screens/DockerContainer/Log.vala:39
 msgid "Autoscroll"
@@ -117,83 +186,83 @@ msgstr "Остановить"
 msgid "Unpause"
 msgstr "Запустить"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:57
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:56
 msgid "Pause"
 msgstr "Пауза"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:60
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:59
 msgid "Container pause error"
 msgstr "Ошибка остановки контейнера"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:75
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:74
 msgid "Restart"
 msgstr "Перезапустить"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:77
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:76
 msgid "Container restart error"
 msgstr "Ошибка перезапуска контейнера"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:80
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:79
 msgid "Restarting container"
 msgstr "Идет перезапуск контейнера"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:96
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:94
 msgid "Remove"
 msgstr "Удалить"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:99
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:97
 msgid "Do you really want to remove container?"
 msgstr "Вы действительно хотите удалить контейнер?"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:100
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:98
 msgid "Yes, remove"
 msgstr "Да, удалить"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:101
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:99
 msgid "Cancel"
 msgstr "Отмена"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:107
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:105
 msgid "Container remove error"
 msgstr "Ошибка удаления контейнера"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:109
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:107
 msgid "Removing container"
 msgstr "Идет удаление контейнера"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:130
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:127
 msgid "Info"
 msgstr "Информация"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:132
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:129
 msgid "Cannot get information"
 msgstr "Приложение не может получить информацию о контейнере"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:156
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:152
 msgid "Container action error"
 msgstr "Ошибка при работе с контейнером"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:161
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:157
 msgid "Container stop error"
 msgstr "Ошибка остановки контейнера"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:162
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:158
 msgid "Stopping container"
 msgstr "Идет остановка контейнера"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:168
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:163
 msgid "Container start error"
 msgstr "Ошибка запуска контейнера"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:169
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:164
 msgid "Starting container"
 msgstr "Идет запуск контейнера"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:175
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:169
 msgid "Container unpause error"
 msgstr "Ошибка запуска контейнера"
 
-#: src/Widgets/Screens/Main/ContainerCardActions.vala:180
+#: src/Widgets/Screens/Main/ContainerCardActions.vala:174
 msgid "Container state is unknown"
 msgstr "Неизвестное состояние контейнера"
 
@@ -201,6 +270,6 @@ msgstr "Неизвестное состояние контейнера"
 msgid "No containers"
 msgstr "Список контейнеров пуст"
 
-#: src/Widgets/Screens/Main/ContainersGridFilter.vala:52
+#: src/Widgets/Screens/Main/ContainersGridFilter.vala:53
 msgid "Sort by:"
 msgstr "Сортировать по:"
