--- a/po/ru.po
+++ b/po/ru.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: com.github.sdv43.whaler\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-06-29 14:00+0300\n"
+"POT-Creation-Date: 2022-07-04 08:24+0300\n"
 "PO-Revision-Date: 2022-03-14 08:44+0300\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -85,7 +85,7 @@ msgstr "Успешно"
 msgid "Error"
 msgstr "Ошибка"
 
-#: src/Widgets/Utils/SettingsDialog.vala:140
+#: src/Widgets/Utils/SettingsDialog.vala:141
 #, c-format
 msgid "Incorrect socket path \"%s\""
 msgstr "Некорректный путь к сокету \"%s\""
@@ -160,7 +160,8 @@ msgid ""
 msgstr ""
 "Похоже, что Docker не установлен в вашей системе.\n"
 "Инструкция по установке доступна в <a href=\"https://docs.docker.com/engine/"
-"install/\">Docker Manuals</a>. Либо проверьте путь к сокету Docker API в настройках."
+"install/\">Docker Manuals</a>. Либо проверьте путь к сокету Docker API в "
+"настройках."
 
 #: src/Widgets/ScreenError.vala:50
 msgid "The app cannot connect to Docker API"
